# XiangQi

./: .gitignore  LICENSE  README.md  acs_build.sh  clean.py  clean.sh  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  key.py  key.sh
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  chess.cpp  chess.h  egl_engine.cpp  egl_engine.h  native_main.cpp  render.cpp  render.h  uci_engine.cpp  uci_engine.h
app/src/main/java/com/zero/xiangqi/: MainActivity.kt
app/src/main/res/values/: styles.xml
app/src/main/res/values-v28/: styles.xml
gradle/: libs.versions.toml
